--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "google-auth-library": "^9.15.1",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.11",
     "mysql2": "^3.15.3"
   }
 }
