--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.6.11",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "node-fetch": "^2.6.11"
   }
 }
